--- a/LOL-API/index.html
+++ b/LOL-API/index.html
@@ -17,7 +17,7 @@
       
         <div class="collapse navbar-collapse " id="navbarSupportedContent">
           <form class="form-inline my-2 my-lg-0 ml-lg-auto mr-lg-0 mx-md-auto">
-            <input class="form-control col-md-10 col-lg-8 mx-sm-auto " type="search" id="#searchBar" placeholder="Search" aria-label="Search">
+            <input class="form-control col-md-10 col-lg-8 mx-sm-auto " type="search" id="searchBar" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-danger my-2 my-sm-0 mx-auto mx-lg-2" id="searchButton">Search</button>
           </form>
         </div>
@@ -50,6 +50,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="./main.js" defer></script>
+    <script src="./main.js"></script>
 </body>
 </html>
