flappy bird game funcionando

--- a/flappybird/index.html
+++ b/flappybird/index.html
@@ -10,5 +10,6 @@
     <canvas width="288" height="512"></canvas>
     <script src="./game.js" type="module"></script>
     <button id="startGame">Start Game</button>
+    <button id="addPipe">AddPipe</button>
 </body>
 </html>
