rede neural criada e implementada

--- a/flappybird/index.html
+++ b/flappybird/index.html
@@ -10,6 +10,7 @@
     <canvas width="288" height="512"></canvas>
     <script src="./game.js" type="module"></script>
     <button id="startGame">Start Game</button>
-    <button id="addPipe">AddPipe</button>
+    <button id="startPopulation">Start Game Neural Network</button>
+    <!-- <button id="addPipe">AddPipe</button> -->
 </body>
 </html>
