--- a/flappybird/index.html
+++ b/flappybird/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <canvas width="288" height="512"></canvas>
+    <h1 id="points"></h1>
     <script src="./game.js" type="module"></script>
     <button id="startGame">Start Game</button>
     <button id="startPopulation">Start Game Neural Network</button>
