randomizacao de pipes e movimentacao deles

--- a/flappybird/index.html
+++ b/flappybird/index.html
@@ -12,6 +12,6 @@
     <script src="./game.js" type="module"></script>
     <button id="startGame">Start Game</button>
     <button id="startPopulation">Start Game Neural Network</button>
-    <!-- <button id="addPipe">AddPipe</button> -->
+    <button id="addPipe">AddPipe</button>
 </body>
 </html>
