--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <canvas id="screen" width="50" height="50"></canvas>
+    <br>
+    <strong>Remaining moves:</strong> <span id="remaining_moves">0</span> <br>
+    <strong>Points:</strong> <span id="points">0</span> <br>
+    <strong>Generation:</strong> <span id="generation">1</span> <br>
+    
     <script src="./js/game.js" type="module"></script>
 </body>
 </html>
