--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -12,6 +12,12 @@
     <strong>Remaining moves:</strong> <span id="remaining_moves">0</span> <br>
     <strong>Points:</strong> <span id="points">0</span> <br>
     <strong>Generation:</strong> <span id="generation">1</span> <br>
+
+    <button id='startAutoPlay'>Start Neural Network</button>
+    <button id='stopAutoPlay'>Stop Neural Network</button>
+    <button id='loadGenome'>Load Genome</button>
+
+    <textarea id="genome"></textarea>
     
     <script src="./js/game.js" type="module"></script>
 </body>
